@@ -42,6 +42,7 @@ Changes 16.02.01
 - GCE: Added default gce_feed_[start/end] default values for admin (Trello #1071)
 - xtec-ldap-login: Added first version of the plugin (Trello #1105)
 - Enllaços educatius: Replaced aplitic.xtec.cat references for ePergam
+- bbpress: Fixed editing time of the posts and comments (Trello #1143)
 
 
 Changes 15.12.14
